--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 # http://rubocop.readthedocs.io
 # https://github.com/bbatsov/rubocop/blob/master/config/enabled.yml
 require:
+  - rubocop-minitest
   - rubocop-performance
+  - rubocop-rake
 
 AllCops:
   DisplayCopNames: true
