Add rubocop-packaging and fix git ls-files cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@
 # https://github.com/bbatsov/rubocop/blob/master/config/enabled.yml
 require:
   - rubocop-minitest
+  - rubocop-packaging
   - rubocop-performance
   - rubocop-rake
 
