Add :suite Rake task to do everything
The :test task now only runs the test and doesn't recompile the native
extension. This change was made to support testing e.g. Berns::Builder
without having to recompile the native extension when it hadn't changed.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Ruby
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   test:
@@ -21,4 +21,4 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
 
     - name: Run tests & lint
-      run: bundle exec rake
+      run: bundle exec rake suite
