--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby-version: [3.1, '3.0', 2.7, 2.6, 2.5]
+        ruby-version: [3.1, '3.0', 2.7]
 
     runs-on: ${{ matrix.os }}
     steps:
