--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Berns
+name: Test Suite
 
 concurrency:
   cancel-in-progress: true
@@ -7,22 +7,33 @@ concurrency:
 on: [push, pull_request]
 
 jobs:
+  ruby-versions:
+    uses: ruby/actions/.github/workflows/ruby_versions.yml@master
+    with:
+      min_version: 2.7
+
   test:
+    needs: ruby-versions
+    name: Test (${{ matrix.ruby }} / ${{ matrix.os }})
     strategy:
-      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        ruby-version: [3.2, 3.1, '3.0', 2.7]
+        ruby: ${{ fromJson(needs.ruby-versions.outputs.versions) }}
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        exclude:
+          - { ruby: jruby }
+          - { ruby: jruby-head }
+          - { ruby: truffleruby }
+          - { ruby: truffleruby-head }
 
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Ruby ${{ matrix.ruby-version }}
+    - name: Set up Ruby ${{ matrix.ruby }}
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
-        ruby-version: ${{ matrix.ruby-version }}
+        ruby-version: ${{ matrix.ruby }}
 
     - name: Run tests & lint
       run: bundle exec rake suite
